@@ -51,7 +51,7 @@ BUGS
     at https://github.com/fakechroot/fakechroot/issues
 
 AUTHORS
-    Copyright (c) 2003, 2005, 2007-2011 Piotr Roszatycki <dexter@debian.org>
+    Copyright (c) 2003, 2005, 2007-2011, 2013 Piotr Roszatycki <dexter@debian.org>
 
     Copyright (c) 2007 Mark Eichin <eichin@metacarta.com>
 
